--- a/misc/blood.html
+++ b/misc/blood.html
@@ -1,7 +1,7 @@
 <center lang="en">
 <head>
     <meta charset="utf-8">
-    <title>jQuery UI Slider - Colorpicker</title>
+    <title>Blood Group Donation Visualizer</title>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -463,7 +463,7 @@ $(function() {
     <div id="ab_pos"></div>
     <div id="ab_neg"></div>
 </div>
-<center></center><h1>Blood donation per person</h1>
+<center></center><h1>Blood donations per person</h1>
 </center>
 
 </body>
