All values now default to 250.

--- a/misc/blood.html
+++ b/misc/blood.html
@@ -440,14 +440,14 @@ $(function() {
         slide: refreshChart,
         change: refreshChart
     });
-    $( "#o_neg" ).slider( "value", 200 );
-    $( "#a_neg" ).slider( "value", 140 );
-    $( "#b_neg" ).slider( "value", 300 );
-    $( "#ab_neg" ).slider( "value", 250 );
-    $( "#o_pos" ).slider( "value", 250 );
-    $( "#a_pos" ).slider( "value", 250 );
-    $( "#b_pos" ).slider( "value", 100 );
-    $( "#ab_pos" ).slider( "value", 250 );
+    //$( "#o_neg" ).slider( "value", 200 );
+    //$( "#a_neg" ).slider( "value", 140 );
+    //$( "#b_neg" ).slider( "value", 300 );
+    //$( "#ab_neg" ).slider( "value", 250 );
+    //$( "#o_pos" ).slider( "value", 250 );
+    //$( "#a_pos" ).slider( "value", 250 );
+    //$( "#b_pos" ).slider( "value", 100 );
+    //$( "#ab_pos" ).slider( "value", 250 );
     refreshChart();
 });
     </script>
